src/styles/App.css
/* ... */
.storytime .userText {
  width: 50%;
}

.storytime .userText p {
  margin: 0;
  padding: 0;
}

.splitSection {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width: 599px) {
  .splitSection {
    display: block;
  }

  textarea {
    width: 90%;
  }
}

.splitSection .imageSplit {
  width: calc(50% - 40px);
  padding: 0 20px;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

@media (max-width: 599px) {
  .splitSection .imageSplit {
    width: 100%;
  }
}

.splitSection .imageSplit img {
  margin: 20px 0;
  max-height: 360px;
}

.splitSection .storedImageSection {
  height: 400px;
}

@media (max-width: 599px) {
  .splitSection .storedImageSection {
    width: 100%;
    height: auto;
    display: block;
  }
}

.splitSection .textSplit {
  width: calc(50%);
  margin: 0 20px;
}

@media (max-width: 599px) {
  .splitSection .textSplit {
    width: 100%;
    margin: 0;
  }
}

.splitSection .textSplit .storyContainer {
  height: 400px;
  text-align: left;
}

@media (max-width: 599px) {
  .splitSection .textSplit .storyContainer {
    height: auto;
  }
}

.splitSection .textSplit .storyContainer p {
  padding: 15px 25px;
}

button {
  background: inherit;
}

header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  font-size: 4rem;
  color: white;
  text-shadow: 5px 5px black;
  background: url(https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);
  background-repeat: no-repeat;
  background-position: center;
}

@media (min-width: 1601px) {
  header {
    padding-bottom: 5%;
  }
}


.oneThirdSection {
  width: 33%;
  height: 100vh;
  background: grey;
  overflow: overlay;
}

@media (min-width: 1401px) {
  .oneThirdSection {
    height: auto;
  }
}

@media (max-width: 900px) {
  .oneThirdSection {
    display: none;
  }
}

h1 {
  font-family: 'Luckiest Guy', cursive;
  font-size: 7rem;
  color: white;
  text-shadow: 5px 2px black;
  margin-top: 200px;
  padding: 0 20px;
  margin-bottom: 20px;
}

@media (max-width: 900px) {
  h1 {
    margin-top: 100px;
    margin-bottom: 50px;
  }
}

@media (max-width: 599px) {
  h1 {
    font-size: 5rem;
    margin-top: 70px;
  }
}

.header-section {
  width: 100%;
  padding-bottom: 100px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  background: #A8D0E6;
  height: 100vh;
}

@media (max-width: 900px) {
  .header-section {
    width: 100%;
    height: auto;
  }
}

.footer-section {
  padding: 10px 0;
  background: #c2c2c2;
}

.previewSection {
  height: 100vh;
  overflow: scroll;
  overflow-x: scroll;
  position: absolute;
  align-self: flex-start;
}

.previewSection img {
  margin: 20px;
}

html {
  font-size: 62.5%;
}

.App {
  text-align: center;
  background: linear-gradient(45deg, #A8D0E6, #c2c2c2);
  font-family: 'Crimson Pro', serif;
  font-size: 2.5rem;

  
}

@media (max-width: 600px) {

  .App {
    font-size: 2rem;
  }
    
  }

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #09d3ac;
}

